# Akira

./: .gitignore  .kateproject.notes  CMakeLists.txt  Dependencies.cmake  README.md
Akira/: CMakeLists.txt
Akira/Source/Akira/: Application.cpp  Application.h  Event.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Window.cpp  Window.h
Akira/Source/Akira/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Akira/Source/Akira/Renderer/: GLUtils.cpp  Renderer.cpp  Shader.cpp
Akira/Source/Core/: Application.cpp  Application.h  Layer.cpp  Layer.h  Logger.cpp  Logger.h  Window.cpp
App/: CMakeLists.txt  run.sh
App/Shaders/: Texture.frag.glsl  Transform.vert.glsl
App/Source/: AppLayer.cpp  AppLayer.h  Main.cpp  OverLayer.cpp  OverLayer.h  VoidLayer.cpp  VoidLayer.h
Core/Source/Core/Renderer/: Shader.h
